# memory-mcp

./: .gitignore  README.md  pyproject.toml
src/memory_mcp/: __main__.py  config.py  models.py  save_cli.py  server.py
src/memory_mcp/embeddings/: manager.py
src/memory_mcp/extraction/: extractor.py
src/memory_mcp/storage/: lance_store.py  profile.py
src/memory_mcp/tools/: recall.py  save.py  update.py
tests/: conftest.py  test_embeddings.py  test_extraction.py  test_integration.py  test_speed.py  test_storage.py
