[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-mcp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.20",
    "anthropic>=0.42",
    "lancedb>=0.20",
    "pyarrow>=18.0",
    "pandas>=2.0",
    "torch>=2.5",
    "transformers>=4.51",
    "sentence-transformers>=2.7",
    "pydantic>=2.10",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
